# doca-selective-fwd

./: .clang-format  .gitignore  README.md  meson.build  notes.txt
src/: dpdk_utils.c  dpdk_utils.h  flow_common.c  flow_common.cpp  flow_common.h  main.c  main.cpp  main.h  pipe_mgr.cpp  pipes.c  pipes.cpp  pmd.c  selective_fwd.h  worker_offload.cpp  worker_pmd.cpp
src/core/: monitoring.cpp  port.cpp
src/pipes/: egress_root.cpp  hairpin.cpp  ingress_root.cpp
